bk_ida/gccida/g1/copy_most_rtx
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/copy_most_rtx/src/emit-rtl.c:2903:19: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
v2 = rtx_alloc( ( rtx_code)*( _WORD *)orig); 
                  ^~~~~~~~
                  rtx_cost
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/copy_most_rtx/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/copy_most_rtx/src/emit-rtl.c:2903:28: error: invalid operands to binary expression ('int (rtx, enum rtx_code)' (aka 'int (struct rtx_def *, enum rtx_code)') and 'uint16 *' (aka 'unsigned short *'))
v2 = rtx_alloc( ( rtx_code)*( _WORD *)orig); 
                ~~~~~~~~~~~^~~~~~~~~~~~~~~
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/copy_most_rtx/src/obj/emit-rtl.o] Error 1
